Fix letter spacing on preview's download button

--- a/css/www/index/page.css
+++ b/css/www/index/page.css
@@ -21,6 +21,10 @@ h2, h3 {
   color: var(--color-black);
 }
 
+.www-index-header-action {
+  font-family: var(--font-family);
+}
+
 .www-index-templates .ampstart-btn,
 .www-header .ampstart-btn {
   background-color: transparent;
